1、在dll中完成了转化 	TCHAR tszRoomName[8];              //房间号 由数字变为 字符 	TCHAR tszIP[32];                   //IP     加零 	TCHAR tszMAC[32];                  //MAC    去分号 	DATE dtTime;                       //时间    由字符串形式转为DATA形式 以上为release模式生成 2、修改了netdetective_client使之支持xml配置IP端口    配置文件路径为当前目录下的 XML文件夹内

--- a/network/netdetective_server/netdetective_client/netdetective_client.vcproj
+++ b/network/netdetective_server/netdetective_client/netdetective_client.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)netdetective_client&quot;;&quot;$(SolutionDir)third_party&quot;;&quot;$(SolutionDir)third_party/socket_module&quot;;&quot;$(SolutionDir)third_party/common&quot;;&quot;$(SolutionDir)third_party/global&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)netdetective_client&quot;;&quot;$(SolutionDir)third_party&quot;;&quot;$(SolutionDir)third_party/socket_module&quot;;&quot;$(SolutionDir)third_party/common&quot;;&quot;$(SolutionDir)third_party/pugixml&quot;;&quot;$(SolutionDir)third_party/global&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -116,7 +116,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)third_party&quot;;&quot;$(SolutionDir)third_party/socket_module&quot;;&quot;$(SolutionDir)third_party/common&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)netdetective_client&quot;;&quot;$(SolutionDir)third_party&quot;;&quot;$(SolutionDir)third_party/socket_module&quot;;&quot;$(SolutionDir)third_party/common&quot;;&quot;$(SolutionDir)third_party/pugixml&quot;;&quot;$(SolutionDir)third_party/global&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -265,6 +265,30 @@
 				</File>
 				<File
 					RelativePath="..\third_party\socket_module\socket\SocketHelper.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="pugixml"
+				>
+				<File
+					RelativePath="..\third_party\pugixml\pugiconfig.hpp"
+					>
+				</File>
+				<File
+					RelativePath="..\third_party\pugixml\pugixml.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\third_party\pugixml\pugixml.hpp"
 					>
 				</File>
 			</Filter>
