--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.rc
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.rc
@@ -35,14 +35,21 @@ IDR_MAINFRAME           ICON                    "res\\DecryptionDLP.ico"
 // Dialog
 //
 
-IDD_MAINDLG DIALOGEX 0, 0, 451, 257
+IDD_MAINDLG DIALOGEX 0, 0, 339, 118
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
 CAPTION "DecryptionDLP"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,394,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,394,24,50,14
-    PUSHBUTTON      "&About",ID_APP_ABOUT,394,236,50,14
+    DEFPUSHBUTTON   "OK",IDOK,116,89,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,185,89,50,14
+    PUSHBUTTON      "&About",ID_APP_ABOUT,251,89,50,14
+    LTEXT           "加密代码路径：",IDC_STATIC,17,38,73,8
+    LTEXT           "解密代码保存路径：",IDC_STATIC,17,57,73,8
+    EDITTEXT        IDC_EDIT_DCODE_PATH,92,35,182,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ECODE_PATH,92,53,182,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "浏览(&B)",IDC_BUTTON_SELEC_ECODE_PATH,282,35,40,14
+    PUSHBUTTON      "浏览(&R)",IDC_BUTTON_SELECT_DCODE_PATH,282,53,40,14
+    LTEXT           "",IDC_STATIC_SHOW,17,73,304,11,WS_BORDER
 END
 
 IDD_ABOUTBOX DIALOG  0, 0, 187, 102
@@ -68,9 +75,9 @@ BEGIN
     IDD_MAINDLG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 444
+        RIGHTMARGIN, 331
         TOPMARGIN, 7
-        BOTTOMMARGIN, 250
+        BOTTOMMARGIN, 111
     END
 
     IDD_ABOUTBOX, DIALOG
