--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
@@ -286,6 +286,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\common\NPipe.h"
+				>
+			</File>
+			<File
 				RelativePath="..\common\ShareMemory.h"
 				>
 			</File>
