--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
@@ -50,7 +50,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(SolutionDir)common"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)common&quot;;&quot;$(SolutionDir)global&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;STRICT;_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -304,5 +304,9 @@
 		</Filter>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="DecryptionDLP.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
