--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.rc
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.rc
@@ -40,16 +40,20 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
 CAPTION "DecryptionDLP"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,116,89,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,185,89,50,14
-    PUSHBUTTON      "&About",ID_APP_ABOUT,251,89,50,14
-    LTEXT           "加密代码路径：",IDC_STATIC,17,38,73,8
-    LTEXT           "解密代码保存路径：",IDC_STATIC,17,57,73,8
-    EDITTEXT        IDC_EDIT_DCODE_PATH,92,35,182,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_ECODE_PATH,92,53,182,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "浏览(&B)",IDC_BUTTON_SELEC_ECODE_PATH,282,35,40,14
-    PUSHBUTTON      "浏览(&R)",IDC_BUTTON_SELECT_DCODE_PATH,282,53,40,14
-    LTEXT           "",IDC_STATIC_SHOW,17,73,304,11,WS_BORDER
+    DEFPUSHBUTTON   "OK",IDOK,143,89,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,200,89,50,14
+    PUSHBUTTON      "&About",ID_APP_ABOUT,257,89,50,14
+    LTEXT           "加密代码路径：",IDC_STATIC,17,39,73,8
+    LTEXT           "解密代码保存路径：",IDC_STATIC,17,56,73,8
+    EDITTEXT        IDC_EDIT_ECODE_PATH,92,36,182,13,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_DCODE_PATH,92,53,182,13,ES_AUTOHSCROLL
+    PUSHBUTTON      "浏览(&B)",IDC_BUTTON_SELEC_ECODE_PATH,282,34,40,14
+    PUSHBUTTON      "浏览(&R)",IDC_BUTTON_SELECT_DCODE_PATH,282,52,40,14
+    LTEXT           "",IDC_STATIC_SHOW,17,73,304,11
+    PUSHBUTTON      "开始",IDC_BUTTON_START,29,89,50,14
+    PUSHBUTTON      "停止",IDC_BUTTON_STOP,86,89,50,14
+    EDITTEXT        IDC_EDIT_PROCESS_NAME,92,19,51,13,ES_AUTOHSCROLL
+    LTEXT           "开发环境进程名：",IDC_STATIC,17,21,73,8
 END
 
 IDD_ABOUTBOX DIALOG  0, 0, 187, 102
