修改为socket通信 现在文件拷贝已经没有问题了 socket连接还有问题 然后文件映射关闭还未检查

--- a/WTL/DecryptionDLP/CreakDLP/CreakDLP.vcproj
+++ b/WTL/DecryptionDLP/CreakDLP/CreakDLP.vcproj
@@ -296,6 +296,14 @@
 				RelativePath="..\global\comm_protocol.h"
 				>
 			</File>
+			<File
+				RelativePath="..\global\DirectoryTraversalFile.h"
+				>
+			</File>
+			<File
+				RelativePath="..\global\SocketClientHelper.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
