--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.rc
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.rc
@@ -54,6 +54,8 @@ BEGIN
     PUSHBUTTON      "停止",IDC_BUTTON_STOP,86,89,50,14
     EDITTEXT        IDC_EDIT_PROCESS_NAME,92,19,51,13,ES_AUTOHSCROLL
     LTEXT           "开发环境进程名：",IDC_STATIC,17,21,73,8
+    PUSHBUTTON      "Inject(&B)",IDC_BUTTON_SELEC_ECODE_PATH2,165,18,44,14
+    PUSHBUTTON      "UnInject(&B)",IDC_BUTTON_SELEC_ECODE_PATH3,220,18,44,14
 END
 
 IDD_ABOUTBOX DIALOG  0, 0, 187, 102
