--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
@@ -278,11 +278,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\common\NPipe.h"
+				RelativePath="..\common\ShareMemory.h"
 				>
 			</File>
 			<File
-				RelativePath="..\common\ShareMemory.h"
+				RelativePath="..\common\Socket.h"
 				>
 			</File>
 			<File
@@ -299,6 +299,10 @@
 			</File>
 			<File
 				RelativePath=".\DecryptDLP.h"
+				>
+			</File>
+			<File
+				RelativePath="..\global\SocketServerHelper.h"
 				>
 			</File>
 		</Filter>
