实现XML配置协议文件读取

--- a/network/test_protocol/test/test_protocol.vcproj
+++ b/network/test_protocol/test/test_protocol.vcproj
@@ -205,6 +205,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\ConfigXML.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
@@ -218,6 +222,50 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="global"
+			>
+			<File
+				RelativePath="..\global\protocol.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="third_party"
+			>
+			<Filter
+				Name="pugixml"
+				>
+				<File
+					RelativePath="..\third_party\pugixml\pugiconfig.hpp"
+					>
+				</File>
+				<File
+					RelativePath="..\third_party\pugixml\pugixml.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							UsePrecompiledHeader="0"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\third_party\pugixml\pugixml.hpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
