--- a/WTL/HOOK_QQ/Inject_Msg_DLL/Inject_Msg_DLL/Inject_Msg_DLL.vcproj
+++ b/WTL/HOOK_QQ/Inject_Msg_DLL/Inject_Msg_DLL/Inject_Msg_DLL.vcproj
@@ -271,5 +271,9 @@
 		</Filter>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="Inject_Msg_DLL.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
