需要修改通信组件库 1、导出时不需其他类型支持 2、导出函数可用

--- a/WTL/NetWork/hp-socket/hp-socket-3.0.2/vc2008/TestSocket/HPSocketDLL/HPSocketDLL.vcproj
+++ b/WTL/NetWork/hp-socket/hp-socket-3.0.2/vc2008/TestSocket/HPSocketDLL/HPSocketDLL.vcproj
@@ -95,7 +95,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)\HPSocketDLL"
 			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\HPSocketDLL"
 			ConfigurationType="2"
-			CharacterSet="1"
+			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -117,8 +117,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)&quot;;&quot;$(ProjectPath);"
-				PreprocessorDefinitions="HPSOCKET_EXPORTS;WIN32;_DEBUG;_WINDOWS;_USRDLL"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)&quot;;"
+				PreprocessorDefinitions="HPSOCKET_EXPORTS;WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
