--- a/TEST_DIR/test_boost/test_boost_pool/test/test.vcproj
+++ b/TEST_DIR/test_boost/test_boost_pool/test/test.vcproj
@@ -191,7 +191,15 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\sys_allocator.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\test.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\time_pool_alloc.cpp"
 				>
 			</File>
 		</Filter>
