线程安全的stl list map queue 测试

--- a/TEST_DIR/test_stl/test_threadsafe/test/test.vcproj
+++ b/TEST_DIR/test_stl/test_threadsafe/test/test.vcproj
@@ -227,7 +227,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\common\safemap.h"
+				RelativePath="..\common\Queue2.h"
 				>
 			</File>
 		</Filter>
