1、实现hotkey控件的值获取 设轩暂未做  但应该和获取类似 2、实现系统热键注册、响应 、删除 3、实现热键冲突提示

--- a/WTL/HotKey/HotKey/HotKey.rc
+++ b/WTL/HotKey/HotKey/HotKey.rc
@@ -47,9 +47,9 @@ BEGIN
     PUSHBUTTON      "&About...",ID_APP_ABOUT,205,113,50,14
     GROUPBOX        "´°¿Ú¿ì½Ý¼ü",IDC_STATIC,17,17,168,51
     GROUPBOX        "ÏµÍ³¿ì½Ý¼ü",IDC_STATIC,17,81,168,51
-    PUSHBUTTON      "×¢²á",IDC_BUTTON_REGEST_WINDOW_HOTKEY,125,37,50,14
-    PUSHBUTTON      "×¢²á",IDC_BUTTON_REGEST_SYSTEM_HOTKEY,125,101,50,14
-    PUSHBUTTON      "È¡Ïû×¢²á",IDC_BUTTON_UNREGEST_HOTKEY,207,78,50,14
+    PUSHBUTTON      "×¢²á&w",IDC_BUTTON_REGISTRY_WINDOW_HOTKEY,125,37,50,14
+    PUSHBUTTON      "×¢²á&s",IDC_BUTTON_REGISTRY_SYSTEM_HOTKEY,125,101,50,14
+    PUSHBUTTON      "È¡Ïû×¢²á&u",IDC_BUTTON_UNREGISTRY_HOTKEY,207,78,50,14
     CONTROL         "",IDC_HOTKEY_WINDOW,"msctls_hotkey32",WS_BORDER | WS_TABSTOP,29,37,80,14
     CONTROL         "",IDC_HOTKEY_SYSTEM,"msctls_hotkey32",WS_BORDER | WS_TABSTOP,29,101,80,14
 END
