--- a/WTL/HotKey/HotKey/HotKey.vcproj
+++ b/WTL/HotKey/HotKey/HotKey.vcproj
@@ -258,5 +258,9 @@
 		</Filter>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="HotKey.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
