1、分离了FileUtil.h的目录遍历功能为DirectoryTraversalUtil.h 2、FileUtil.h只处理文件 路径相关全局函数操作 3、完美了DirectoryTraversalUtil.h文件目录遍历类

--- a/TEST_DIR/test_public/test/test.vcproj
+++ b/TEST_DIR/test_public/test/test.vcproj
@@ -227,6 +227,10 @@
 			Name="public"
 			>
 			<File
+				RelativePath=".\public\DirectoryTraversalUtil.h"
+				>
+			</File>
+			<File
 				RelativePath=".\public\FileUtil.h"
 				>
 			</File>
